responsive beakpoint >1200 & 992< 1199 Fait

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -32,18 +32,16 @@ body {
   background-color: #F8F9FB;
   font-family: 'Roboto', sans-serif;
   color: #032f3e;
-
-
 }
 .container-fluid {
   max-width: 1700px;
   padding: 0;
-  border: 1px red solid;
+  //border: 1px red solid;
 }
 
 .container {
   max-width: 1200px;
-  border: 1px green solid;
+  //border: 1px green solid;
 
 }
 h1 {
@@ -106,7 +104,7 @@ h5 {
 
 h6 {
   font-family: 'Roboto Bold',sans-serif;
-  font-size: 18px;
+  font-size: 1em;
 
   margin-left: 160px;
 
