--- a/sass/module/_copyright.scss
+++ b/sass/module/_copyright.scss
@@ -16,6 +16,13 @@
 
 .copyright {
 
+  div {
+    //height: 105px;
+    vertical-align: middle;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
   p {
     padding:0;
     margin: 10px;
