--- a/sass/module/_slide.scss
+++ b/sass/module/_slide.scss
@@ -12,9 +12,16 @@
   top:0;
   left: 0;
   right: 0;
-  box-shadow: #666667;
 
-
+    .slide-box-shadow {
+      box-shadow: 10px 32px 10px #666667;
+    }
+  //
+  //-moz-box-shadow: 0px 20px 20px 40px #656565;
+  //-webkit-box-shadow: 0px 20px 20px 40px #656565;
+  //-o-box-shadow: 0px 20px 20px 40px #656565;
+  //box-shadow: 0px 20px 20px 40px #656565;
+  ////filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=180, Strength=20);
 
 
   .slide-test {
