--- a/style.css
+++ b/style.css
@@ -1,19 +1,3 @@
-@charset "UTF-8";
-/* Hierarchie de dossier Smacss
-    1- Base (p, body, h1, h2....)
-    2- Layout (.l-header, .l-sidebar, .l-footer) Mettre essentiellement les indication de positionnement du bloc
-    3- Module (.widget, .list, .btn, .bloc, .title ou encore la personnalisation (style) des groupes de contenus ds la section ex: section header 
-    4- State (.is-active, is-visible, is-hidden ...) les class concernant les actions avec le JS
-    5- Theme (.dark, .light,....) n├®cessaire surtout lors de th├¿me personnalisable avec plusieurs couleurs
-  
-  Hi├®rarchiser un bloc de style
-    .laClass {
-        Box
-        Border
-        Background  
-        text
-        other
-    }*/
 /*  Base  */
 @media (min-width: 7668px) and (max-width: 991px) {
   .container-fluid {
@@ -242,21 +226,20 @@ a:active, a:focus {
   font-weight: bold;
   font-size: 18px;
   text-transform: uppercase; }
+  .menu .navbar-default {
+    background-color: #032f3e !important;
+    border: 1px #0d3948 solid; }
+  .menu .navbar {
+    margin-bottom: 0; }
+  .menu .navbar-nav {
+    padding: 0; }
   .menu .menu-item {
-    text-align: center; }
-    .menu .menu-item a {
-      display: block;
-      height: 100px;
-      padding-top: 10px;
-      border-left: 1px #0d3948 solid;
-      line-height: 5; }
-  .menu .menu-item-first a {
-    border-left: 1px #0d3948 solid; }
-  .menu .menu-item-last a {
-    border-right: 1px #0d3948 solid;
-    border-left: none; }
-  .menu .menu-item-two a {
-    border-left: none; }
+    text-align: center;
+    display: block;
+    height: 100px;
+    padding-top: 10px;
+    border: 1px #0d3948 solid;
+    line-height: 5; }
 
 /*  Section Slide */
 .slide-button {
@@ -268,8 +251,9 @@ a:active, a:focus {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  box-shadow: #666667; }
+  right: 0; }
+  .slide .slide-box-shadow {
+    box-shadow: 10px 32px 10px #666667; }
   .slide .slide-test {
     position: absolute;
     top: 485px;
@@ -718,6 +702,19 @@ a:active, a:focus {
 
   .header .not_tablet {
     display: none; }
+
+  .menu .menu-item a {
+    border-bottom: 1px #0d3948 solid;
+    border-left: none;
+    border-right: none; }
+  .menu .menu-item-first {
+    border-left: none; }
+  .menu .navbar .navbar-default {
+    background-color: #032f3e !important;
+    border-color: #032f3e !important; }
+  .menu .navbar-header {
+    background-color: #f8f9fb;
+    border-color: #f8f9fb; }
 
   .services .services-box {
     display: flex;
