--- a/style.css
+++ b/style.css
@@ -495,7 +495,7 @@ a:active, a:focus {
     padding-top: 5px; }
 .latestNews .latestNews-col-left .latestNews-article2 {
   background-color: white;
-  box-shadow: 1.1px 2px 1.9px #d6d4d4; }
+  git checkout box-shadow: 1.1px 2px 1.9px #d6d4d4; }
   .latestNews .latestNews-col-left .latestNews-article2 .col-md-12 {
     padding: 0; }
   .latestNews .latestNews-col-left .latestNews-article2 .lien {
