--- a/sass/module/_responsive.scss
+++ b/sass/module/_responsive.scss
@@ -51,7 +51,7 @@
     }
 
     .navbar-header {
-      background-color: #f8f9fb;
+      //background-color: #f8f9fb;
       border-color: #f8f9fb;;
     }
   }
