--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -41,7 +41,7 @@
  }
   .l-testimonials {
     position: relative;
-    background-image: url('img/pattern.png');
+    background-image: url('../img/pattern.png');
     padding-bottom: 119px;
 
     border-bottom: 5px #aa977a solid;
