responsive mobile suite

--- a/sass/module/_responsive.scss
+++ b/sass/module/_responsive.scss
@@ -1,14 +1,58 @@
 /*  Responsive Mobile */
 @media screen and (max-width:768px) {
 
+  h2 {
+    margin-top: 60px;
+  }
+
   .header .header-contact {
     display: none;
+  }
+
+  .header .header-icon {
+    justify-content: flex-start;
+  }
+  .header .header-icon p {
+    margin: 0 9px 0 5px;
   }
 
   .l-slide {
     display: none;
   }
 
+  .lessons h3 {
+    margin-top: 60px;
+    font-size: 41px;
+  }
+
+  .lessons-text p {
+    padding-left: 15px;
+  }
+
+  .lessons .lessons-pipe:after {
+    margin: 21px;
+  }
+
+  .projects  {
+    margin-top: 50px;
+  }
+
+  .projects .projects-header {
+    margin-bottom: 50px;
+  }
+
+  .projects .project-footer {
+    margin-top: 0px;
+    //margin-bottom: 60px;
+  }
+
+  .btn-action {
+    width: 230px;
+  }
+
+  .projects .project-pagination {
+    margin-bottom: 50px;
+  }
   .services .services-box .services-box-img {
     position: relative;
     width: 67px;
@@ -62,19 +106,27 @@
     margin-bottom: 15px;
   }
 
-
-  .project-footer-box-middle .col-xs-12 {
-    width: 100%;
-    padding-left: 0;
-    padding-right: 0;
+  .col-xs-12 .project-footer-box-middle {
+      padding-left: 0;
+      padding-right: 0;
   }
-  
+
   .skype .skype-content {
     text-align: center;
   }
 
+  .skype .skype-content .skype-text {
+    margin-left: 0;
+    font-size: 24px;
+  }
+
   .skype .btn-action {
     width: 100%;
+  }
+
+  .skype .col-md-6, .skype .col-md-4 {
+    margin-top: 0;
+    margin-bottom: 50px;
   }
 
   .testimonials .testimonials-content .testimonials-btn button {
@@ -90,6 +142,43 @@
       border: 3px #aa977a solid;
       background-color: transparent;
     }
+  
+  .latestNews-col-right {
+    display: none;
+  }
+
+  .latestNews .latestNews-btn-action button {
+    width: 228px;
+    margin-bottom: 50px;
+
+  }
+
+  .latestNews-button {
+    display: none;
+  }
+
+  .map .map-modal {
+    top: 163px;
+    right: 48px;
+    width: 273px;
+    height: 78px;
+  }
+
+
+  .copyright {
+   display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap-reverse;
+  }
+
+  .copyright .copyright-text {
+    font-size: 12px;
+  }
+
+  .copyright div {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 
 
   
@@ -295,6 +384,11 @@
     }
   }
 
+  .projects .project-footer .project-footer-box-middle {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
   .projects {
     .project-footer {
 
@@ -313,12 +407,18 @@
 
 
   .skype {
+
+    .skype-center {
+      text-align: center;
+    }
       .skype-content {
         margin-bottom: -76px;
       }
   }
 
-
+  .testimonials {
+    margin-bottom: 50px;
+  }
 
   .map {
 
@@ -347,6 +447,18 @@
   }
 
 }
+
+
+/*  Responsive TV */
+@media screen and (min-width:1220px) {
+  .services-box-img .service-icon {
+    position: absolute;
+    top: 31px;
+    left: 54px;
+  }
+
+}
+
 
 
 
