--- a/sass/module/_testimonials.scss
+++ b/sass/module/_testimonials.scss
@@ -20,6 +20,10 @@
       }
     }
 
+    .testimonials-btn1 {
+      display: none;
+    }
+
     .testimonials-avatar {
         text-align: center;
     }
